Details
-
Bug
-
Resolution: Fixed
-
Trivial
Description
The "history" command in cmd.exe doesn't print a newline after each command.
To recreate:
run cmd.exe
run a few commands
run history
All the commands will be printed on the same line. For example:
dirnotepad output.txtdirhistory
The attached patch fixes the issue.
Attachments
Issue Links
- relates to
-
CORE-8002 METABUG - cmd.exe Command-line interpreter bugs
-
- Open
-