[CMD] HISTORY: Fix command output (missing linefeed) (#3205)

CORE-12603

Co-authored-by: Hermès BÉLUSCA - MAÏTO <hermes.belusca-maito@reactos.org>